--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,8 @@
 <script src="assets/admin/layout3/scripts/layout.js" type="text/javascript"></script>
 <script src="assets/admin/layout3/scripts/demo.js" type="text/javascript"></script>
 
+<link rel="shortcut icon" href="favicon.ico"/>
+
 <!-- END THEME STYLES -->
     <title>React App</title>
   </head>
